[gd_scene load_steps=2 format=3 uid="uid://ctwjn4i10sfdp"]

[ext_resource type="Script" path="res://scene/MeshInfo.gd" id="1_p80ls"]

[node name="MeshInfo" type="PanelContainer"]
offset_right = 241.0
offset_bottom = 113.0
script = ExtResource("1_p80ls")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 241.0
offset_bottom = 167.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_right = 241.0
offset_bottom = 32.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_right = 205.0
offset_bottom = 32.0
size_flags_horizontal = 3
theme_override_constants/margin_left = 8

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
offset_left = 8.0
offset_top = 3.0
offset_right = 205.0
offset_bottom = 29.0
text = "Mesh name"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
offset_left = 209.0
offset_right = 241.0
offset_bottom = 32.0
text = "X"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
offset_top = 36.0
offset_right = 241.0
offset_bottom = 167.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
offset_left = 16.0
offset_right = 225.0
offset_bottom = 115.0

[node name="LbFaceCount" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_right = 209.0
offset_bottom = 26.0
text = "Face count: 123"

[node name="LbBBox" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 30.0
offset_right = 209.0
offset_bottom = 53.0

[node name="LbSize" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 57.0
offset_right = 209.0
offset_bottom = 80.0

[node name="BtnViewUV" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 84.0
offset_right = 209.0
offset_bottom = 115.0
text = "View UV"
